<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="525.82dp"
        android:layout_height="77.37dp"
        android:background="@drawable/setup_bg01"
        android:paddingLeft="12.77dp"
        android:paddingTop="12.77dp" >

        <LinearLayout
            android:id="@+id/studentBtn"
            android:layout_width="217.84dp"
            android:layout_height="64.6dp"
            android:background="@drawable/btn_state_setup_tab"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="11.25dp"
                android:src="@drawable/setup_icon_tab_student" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.25dp"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_student"
                android:textColor="@color/setup_tap_textcolor"
                android:textSize="23.29dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teacherBtn"
            android:layout_width="217.84dp"
            android:layout_height="64.6dp"
            android:layout_marginLeft="11.27dp"
            android:background="@drawable/btn_state_setup_tab"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="11.25dp"
                android:src="@drawable/setup_icon_tab_teacher" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.25dp"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_teacher"
                android:textColor="@color/setup_tap_textcolor"
                android:textSize="23.29dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/closeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4.51dp"
                android:src="@drawable/setup_btn_close" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/studentView"
        android:layout_width="525.82dp"
        android:layout_height="223.85dp"
        android:background="@drawable/setup_bg02"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/networkBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="76.62dp"
            android:paddingRight="51.08dp"
            android:paddingTop="31dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setup_btn_network" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_network"
                android:textColor="#887257"
                android:textSize="19.53dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/datasyncBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="51.08dp"
            android:paddingRight="76.62dp"
            android:paddingTop="31dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setup_btn_datasync" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_data_sync"
                android:textColor="#887257"
                android:textSize="19.53dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/teacheView"
        android:layout_width="525.82dp"
        android:layout_height="223.85dp"
        android:background="@drawable/setup_bg02"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/connectedStudentBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="31dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15.02dp"
                android:src="@drawable/setup_btn_connectmem" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_connected_student"
                android:textColor="#887257"
                android:textSize="19.53dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88.64dp"
            android:orientation="vertical"
            android:paddingTop="31dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setup_btn_delete" />

            <org.our.android.ouracademy.ui.widget.NCTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:shadowColor="#ffffff"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/str_delete"
                android:textColor="#887257"
                android:textSize="19.53dp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/data_sync_view"
        layout="@layout/data_sync"
        android:visibility="gone" />

    <include
        android:id="@+id/password_view"
        layout="@layout/password_view"
        android:visibility="gone" />

</LinearLayout>